# bookstore

./: .codefactor.yml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py  wsgi.py
bookstore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/tests_viewsets/: tests_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category.py  test_product.py
product/tests/tests_models/: test_category.py  test_product.py
product/tests/tests_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
staticfiles/admin/css/: base.css  forms.css
staticfiles/debug_toolbar/css/: toolbar.css
