[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "A Django bookstore project"
authors = ["Alice Herrera <aliceherrera80@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
Django = ">=5.2.1,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
faker = ">=37.3.0,<38.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = ">=4.11.1,<5.0.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"